# Multicore-Game-of-Life-OpenCL

./: CMakeLists.txt  Configs.cpp  Configs.h  KernelSource.h  README.md  main.cpp
